[package]
name = "givegif-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.24.8", default-features = false, features = ["png", "jpeg", "webp", "gif"]}
